container no longer aligned to center

--- a/styles.css
+++ b/styles.css
@@ -12,20 +12,21 @@
 {
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
 }
 
 #top
 {
     /* center contents */
-    text-align: left;
+
     background-color:#FCF8E3;
+
      
 }
 
 .site-header .logo
 {
-
+    text-align: left;
+    padding: 20px;
     text-decoration: none;
     font-size:110px;
     font-weight: bold;
@@ -34,6 +35,8 @@
 
 .blurb
 {
+    text-align:left;
+    padding: 80px;
     font-size: 50px;
     font-weight: bold;
     font-family:'Architects Daughter', Helvetica-neue, Tahoma, Arial;
